2011-04-11  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_get_keygrip): Avoid double free of L2.

	* cipher.c (_gcry_cipher_setctr): Clear unused lastiv info.
	(gcry_cipher_ctl) <GCRYCTL_SET_CTR>: Implement by calling
	_gcry_cipher_setctr.
	(do_ctr_encrypt): Save last counter and reuse it.

	* cipher.c (do_ctr_encrypt): Allow arbitrary length inputs to
	match the 1.4 behaviour.

2011-04-04  Werner Koch  <wk@g10code.com>

	* ecc.c (compute_keygrip): Release L1 while parsing "curve".

	* pubkey.c (gcry_pk_get_keygrip): Always release NAME and L2.
	Reported by Ben Kibbey.

2011-03-28  Werner Koch  <wk@g10code.com>

	* primegen.c (_gcry_generate_elg_prime): Make sure that PRIME is
	NULL if the called func ever returns an error.

	* pubkey.c (gcry_pk_decrypt): Remove unused var PUBKEY.

2011-03-09  Werner Koch  <wk@g10code.com>

	* kdf.c: New.

2011-02-22  Werner Koch  <wk@g10code.com>

	* rijndael.c (aesni_cleanup_2_4): New.
	(aesenc_xmm1_xmm0, do_aesni_ctr_4): New.
	(_gcry_aes_ctr_enc): New.
	* cipher.c (struct gcry_cipher_handle): Add CTR_ENC.  Move field
	CTR into an u_ctr union and adjust all users.
	(gcry_cipher_open): Use _gcry_aes_ctr_enc.
	(do_ctr_encrypt): Use bulk mode.

2011-02-18  Werner Koch  <wk@g10code.com>

	* rijndael.c (u32_a_t): New.
	(do_encrypt_aligned, do_encrypt_aligned): Use the new type to
	avoid problems with strict aliasing rules.

2011-02-16  Werner Koch  <wk@g10code.com>

	* rijndael.c (do_aesni_cfb) [USE_AESNI]: New.
	(_gcry_aes_cfb_enc, _gcry_aes_cfb_dec) [USE_AESNI]: Use new fucntion.

2011-02-15  Werner Koch  <wk@g10code.com>

	* rijndael.c (do_aesni_enc_aligned, do_aesni_dec_aligned): Use
	movdqa for the key but keep using movdqu for the data.
	(do_aesni): Remove alignment detection.  Don't burn the stack.
	(aesni_prepare, aesni_cleanup): New macros.
	(rijndael_encrypt, _gcry_aes_cfb_enc, _gcry_aes_cbc_enc)
	(rijndael_decrypt, _gcry_aes_cfb_dec, _gcry_aes_cbc_dec): Use
	these macros.  Don't burn the stack in the USE_AESNI case.